--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ practice.ipynb
 chromedriver.exe
 Class Activities/
 practice_index.html
+temp.py
+debug.log
+Mission_to_Mars_Challenge_starter_code.ipynb
